RESOLVED FIXED309203
Extensions with a trailing common in manifest.json don't show in Safari
https://bugs.webkit.org/show_bug.cgi?id=309203
Summary Extensions with a trailing common in manifest.json don't show in Safari
Elijah Sawyers
Reported 2026-03-04 16:12:04 PST
Attachments
Elijah Sawyers
Comment 1 2026-03-04 16:19:00 PST
EWS
Comment 2 2026-03-09 14:15:52 PDT
Committed 308935@main (d725750b6bcd): <https://commits.webkit.org/308935@main> Reviewed commits have been landed. Closing PR #59931 and removing active labels.
EWS
Comment 3 2026-03-09 17:55:19 PDT
Committed 305413.423@safari-7624-branch (cf9390741dce): <https://commits.webkit.org/305413.423@safari-7624-branch> Reviewed commits have been landed. Closing PR #4640 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.